# Zephyr-Synth

./: .gitignore  Index.html  README.md  ROADMAP.md  index.html  last-failure.txt  latencyPatch.js  main.js  performView.js  workspace.js
.github/workflows/: android-debug-apk.yml
native/: CMakeLists.txt  README.md
native/android-app/: README.md  build.gradle.kts  settings.gradle.kts
native/android-app/app/: build.gradle.kts
native/android-app/app/src/main/: AndroidManifest.xml
native/android-app/app/src/main/cpp/: CMakeLists.txt  zephyr_jni.cpp
native/android-app/app/src/main/java/io/zephyr/synth/: MainActivity.kt  MidiInputController.kt  NativeBridge.kt  ParameterTargets.kt  ZephyrKeyboardView.kt
native/android-app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
native/android-app/app/src/main/res/layout/: activity_main.xml
native/android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
native/include/zephyr/: AndroidAudioEngine.h  LockFreeMidiQueue.h  MidiEvent.h  MidiTranslator.h  Modulation.h  ParameterMessage.h  Voice.h  ZephyrEngine.h
native/src/: MidiTranslator.cpp  Voice.cpp  ZephyrEngine.cpp
native/src/android/: AndroidAudioEngine.cpp
src/: mpe.js  synth.js
src/ui/: knobRenderer.js  uiEngine.js
src/worklets/: vcoProcessor.js
